RESOLVED FIXED292413
AX: [AX Thread Text APIs] RightWord/LeftWorld shouldn't return a range that ends/starts with the current marker
https://bugs.webkit.org/show_bug.cgi?id=292413
Summary AX: [AX Thread Text APIs] RightWord/LeftWorld shouldn't return a range that e...
Joshua Hoffman
Reported 2025-05-01 18:03:29 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-01 18:03:40 PDT
Joshua Hoffman
Comment 2 2025-05-01 18:10:58 PDT
EWS
Comment 3 2025-05-02 06:34:47 PDT
Committed 294427@main (f397ef43f70c): <https://commits.webkit.org/294427@main> Reviewed commits have been landed. Closing PR #44822 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.