AX: [AX Thread Text APIs] RightWord/LeftWorld shouldn't return a range that ends/starts with the current marker https://bugs.webkit.org/show_bug.cgi?id=292413 rdar://150488243

Reviewed by Tyler Wilcock.

On the live tree, if we are at the boundary of a containing block (and at the end of a word), we will return
a length-zero text marker range at that position. But, with the accessibiltiy thread text markers, we would
return the word range that ended on that marker.

We should match the live tree, and instead, if the result of the word range from a marker is a range that ends
with that marker, just return a length-zero range at that position. This behavior is also matched for left word
too.

I updated isolated tree -only text marker expectations for this new behavior, and added a new test to
verify.

* LayoutTests/accessibility/isolated-tree/editable-word-navigation-expected.txt:
* LayoutTests/accessibility/isolated-tree/simple-word-navigation-expected.txt:
* LayoutTests/accessibility/mac/right-word-range-at-boundary-expected.txt: Added.
* LayoutTests/accessibility/mac/right-word-range-at-boundary.html: Added.
* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::AXTextMarker::wordRange const):

Canonical link: https://commits.webkit.org/294427@main